...
                        }
                        navController.navigate("profile")
                    })
                NavigationDrawerItem(colors = NavigationDrawerItemDefaults.colors(unselectedContainerColor = Color(0xFF646EF5),
                    unselectedTextColor = Color(0xFFFFFFFF),
                    unselectedIconColor = Color(0xFFFFFFFF)),
                    label = { Text(text = "Logout") },
                    selected = false,
                    icon = {
                        Icon(
                            imageVector = Icons.AutoMirrored.Filled.ExitToApp,
                            contentDescription = "Logout"
                        )
...
                                Icon(
                                    imageVector = Icons.Outlined.Star,
                                    contentDescription = "event"
                                )
                            }
                            IconButton(onClick = { coroutine.launch { drawerState.open() }}) {
                                Icon(imageVector = Icons.Rounded.MoreVert, contentDescription = "menu")
                            }
                        }
                    }
                }
            }
        )
...
